<resources>
    <string name="app_name">RealApp</string>

    <string name="attributes">ATTRIBUTES </string>

    <string name="project_manager">PROJECT MANAGER/TECHNICAN <font color="#FF0000">*</font></string>
    <string name="loss_types">LOSS TYPES <font color="#FF0000">*</font></string>
    <string name="address">ADDRESS<font color="#FF0000">*</font></string>
    <string name="house">HOUSE<font color="#FF0000">*</font></string>
    <string name="street">STREET<font color="#FF0000">*</font></string>
    <string name="city">CITY<font color="#FF0000">*</font></string>
    <string name="state">STATE<font color="#FF0000">*</font></string>
    <string name="postal_code">POSTAL CODE<font color="#FF0000">*</font></string>
    <string name="name">NAME <font color="#FF0000">*</font></string>
    <string name="enter_name">Enter name </string>
    <string name="enter_house_number">Enter house number </string>
    <string name="enter_street">Enter street </string>
    <string name="enter_city">Enter city </string>
    <string name="enter_state">Enter state </string>
    <string name="enter_postal_code">Enter postal code </string>
    <string name="email">EMAIL <font color="#FF0000">*</font></string>
    <string name="enter_email">Enter email </string>
    <string name="phone_number">PHONE NUMBER <font color="#FF0000">*</font></string>
    <string name="enter_phone_number">Enter phone number </string>
    <string name="use_my_location">USE MY LOCATION </string>
    <string name="water">Water </string>
    <string name="fire">Fire </string>
    <string name="vehicle_impact">Vehicle Impact </string>
    <string name="trauma">Trauma </string>
    <string name="environmetal">Environmental </string>
    <string name="other">Other </string>
    <string name="category_of_water">Category of water </string>

    <string name="cat_one">CAT 1 </string>
    <string name="cat_two">CAT 2 </string>
    <string name="cat_three">CAT 3 </string>

    <string name="class_of_water">Class of water </string>

    <string name="class_one">Class 1 </string>
    <string name="class_two">Class 2 </string>
    <string name="class_three">Class 3 </string>
    <string name="class_four">Class 4 </string>
    <string name="class_not_defined">Not defined </string>
    <string name="class_not_defined_2">Cannot be defined for entire tour </string>

    <string name="catergory_water_exp_text">Category of water indicates contamination level. Class of water depends on wet surface area and material properties. See ANSI/IICRC S500 for details. </string>

    <string name="scoping_notes">Scoping notes (Many or none can be selected. Notes streamline the process for fast and accurate estimates)</string>


    <string name="customer_policyholder">CUSTOMER (POLICYHOLDER) <font color="#FF0000">*</font></string>
    <string name="first_name">FIRST NAME <font color="#FF0000">*</font></string>
    <string name="enter_first_name">Enter first name </string>

    <string name="last_name">LAST NAME <font color="#FF0000">*</font></string>
    <string name="enter_last_name">Enter last name </string>
    <string name="customer_is_business">Customer (Policeholder) is business </string>

    <string name="carrier">CARRIER <font color="#FF0000">*</font></string>
    <string name="carrier_name">CARRIER NAME <font color="#FF0000">*</font></string>
    <string name="enter_notes"> Enter your notes here </string>
    <string name="guideliness">GUIDELINES </string>
    <string name="apply_guidelines"> Apply guidelines </string>

    <string name="scope_of_work">SCOPE OF WORK </string>

    <string name="download_file">Download File </string>

    <string name="next">NEXT </string>
    <string name="done">DONE </string>



    <string name="sow_doc_attention">We will use the latest SOW-document created in the DocuSketch app. Please pay attention if it is incorrect, we may charge an additional fee. </string>

    <string name="toasttext">Fill in all required (<font color="#FF0000">*</font>) fields </string>

    <string name="toasttext2">Failed to obtain location! (<font color="#FF0000">*</font>) fields </string>

    <string name="claim_info"> CLAIM INFO </string>

    <string name="estimate"> ESTIMATE # 1 </string>
    <string name="notes"> NOTES </string>

    <string name="enter_your_notes_here"> Enter you notes here </string>

    <string name="symbol2000"> 2000 symbols left </string>

    <string name="estimte_type">ESTIMATE TYPE <font color="#FF0000">*</font></string>

    <string name="by_changing_the_address">By changing the address it will be changed for the whole tour. </string>

    <string name="emergency_mitigation">Emergency/Mitigation </string>
    <string name="reconstruction_general">Reconstruction/General/Other </string>
    <string name="contents">Contents </string>
    <string name="water_mitigation">Water mitigation</string>
    <string name="temporary_board">Temporary board up</string>
    <string name="temporary_patch">Temporary patch</string>
    <string name="temporary_shoring">Temporary shoring</string>
    <string name="roof_tarp">Roof tarp</string>
    <string name="demolition">Demolition</string>
    <string name="hazardous_clean">Hazardous clean up</string>
    <string name="mold_remediation">Mold remediation</string>
    <string name="Asbestos_abatement">Asbestos_abatement</string>






</resources>

