<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background">

        <TextView
            android:id="@+id/estimate_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_flex"
            android:paddingStart="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="24dp"
            android:text="@string/estimate"
            android:textColor="@color/main_textcolor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/estimate_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/roboto_flex"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingVertical="16dp"
            android:text="@string/estimte_type"
            android:textColor="@color/main_textcolor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/estimate_top"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/emergency_mitigation_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/estimate_type"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/loss_emergency"
            android:paddingStart="12dp"
            android:text="@string/emergency_mitigation"
            android:drawablePadding="8dp"
            android:gravity="start|center_vertical"
            android:textAllCaps="false"
            />
        <View
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/estimate_type"
            app:layout_constraintBottom_toBottomOf="@id/contents"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/hide_bg"
            app:layout_constraintTop_toTopOf="@id/emergency_mitigation_btn"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="@id/expandableContent7"
            app:layout_constraintEnd_toEndOf="@id/expandableContent7"
            app:layout_constraintBottom_toBottomOf="@id/expandableContent7"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expandableContent7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emergency_mitigation_btn"
            >

            <TextView
                android:id="@+id/scoping_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scoping_notes"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="12dp"
                android:textColor="@color/main_textcolor"
                android:textSize="12sp"
                android:fontFamily="@font/roboto_flex"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/water_mitigation_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintTop_toBottomOf="@+id/scoping_notes"
                android:background="@drawable/button_border_selector"
                android:paddingStart="12dp"
                android:text="@string/water_mitigation"
                android:drawablePadding="8dp"
                android:textAllCaps="false"
                android:gravity="start|center_vertical"
                />
            <Button
                android:id="@+id/temporary_board_up_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintTop_toBottomOf="@+id/water_mitigation_btn"
                android:background="@drawable/button_border_selector"
                android:paddingStart="12dp"
                android:text="@string/temporary_board"
                android:drawablePadding="8dp"
                android:textAllCaps="false"
                android:gravity="start|center_vertical"
                />

            <Button
                android:id="@+id/temporary_patch_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintTop_toBottomOf="@+id/temporary_board_up_btn"
                android:background="@drawable/button_border_selector"
                android:paddingStart="12dp"
                android:text="@string/temporary_patch"
                android:drawablePadding="8dp"
                android:textAllCaps="false"
                android:gravity="start|center_vertical"
                />
            <Button
                android:id="@+id/roof_tarp_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintTop_toBottomOf="@+id/temporary_patch_btn"
                android:background="@drawable/button_border_selector"
                android:paddingStart="12dp"
                android:text="@string/roof_tarp"
                android:drawablePadding="8dp"
                android:textAllCaps="false"
                android:gravity="start|center_vertical"
                />
            <Button
                android:id="@+id/demolition_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintTop_toBottomOf="@+id/roof_tarp_btn"
                android:background="@drawable/button_border_selector"
                android:paddingStart="12dp"
                android:text="@string/demolition"
                android:drawablePadding="8dp"
                android:textAllCaps="false"
                android:gravity="start|center_vertical"
                />
            <Button
                android:id="@+id/contents_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintTop_toBottomOf="@+id/demolition_btn"
                android:background="@drawable/button_border_selector"
                android:paddingStart="12dp"
                android:text="@string/contents"
                android:drawablePadding="8dp"
                android:textAllCaps="false"
                android:gravity="start|center_vertical"
                />
            <Button
                android:id="@+id/hazardous_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintTop_toBottomOf="@+id/contents_btn"
                android:background="@drawable/button_border_selector"
                android:paddingStart="12dp"
                android:text="@string/hazardous_clean"
                android:drawablePadding="8dp"
                android:textAllCaps="false"
                android:gravity="start|center_vertical"
                />
            <Button
                android:id="@+id/mold_remediation_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintTop_toBottomOf="@+id/hazardous_btn"
                android:background="@drawable/button_border_selector"
                android:paddingStart="12dp"
                android:text="@string/mold_remediation"
                android:drawablePadding="8dp"
                android:textAllCaps="false"
                android:gravity="start|center_vertical"
                />
            <Button
                android:id="@+id/abestos_abatement_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintTop_toBottomOf="@+id/mold_remediation_btn"
                android:background="@drawable/button_border_selector"
                android:paddingStart="12dp"
                android:text="@string/Asbestos_abatement"
                android:drawablePadding="8dp"
                android:textAllCaps="false"
                android:gravity="start|center_vertical"
                app:layout_constraintBottom_toBottomOf="@id/expandableContent7"
                android:layout_marginBottom="12dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/reconsturction_general_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            app:layout_constraintTop_toBottomOf="@+id/expandableContent7"
            android:background="@drawable/button_border_selector"
            android:drawableStart="@drawable/loss_reconstruction_general"
            android:paddingStart="12dp"
            android:text="@string/reconstruction_general"
            android:drawablePadding="8dp"
            android:gravity="start|center_vertical"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            app:layout_constraintTop_toBottomOf="@+id/reconsturction_general_btn"
            android:background="@drawable/button_border_selector"
            android:drawableStart="@drawable/loss_contents"
            android:paddingStart="12dp"
            android:text="@string/contents"
            android:textAllCaps="false"
            android:drawablePadding="8dp"
            android:gravity="start|center_vertical"
            />
        <View
            android:id="@+id/background_not_temp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            app:layout_constraintTop_toBottomOf="@id/contents"
            />
        <TextView
            android:id="@+id/notes_estimate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_flex"
            android:paddingStart="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="24dp"
            android:text="@string/notes"
            android:textColor="@color/main_textcolor"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/background_not_temp"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:id="@+id/noteEditText2000"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:minHeight="246dp"
            android:width="1dp"
            android:gravity="top|start"
            android:background="@android:color/white"
            android:hint="@string/enter_your_notes_here"
            android:padding="12dp"
            android:textSize="16sp"
            android:textColor="@color/main_textcolor"
            android:inputType="textMultiLine"
            android:maxLength="2000"
            android:scrollbars="vertical"
            android:overScrollMode="always"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@id/notes_estimate"
            />
        <TextView
            android:id="@+id/charCountNoteEditText2000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/symbol2000"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/noteEditText2000"/>

        <View
            android:id="@+id/backlast3"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
            android:id="@+id/nextButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btn_rounded_back"
            android:text="@string/done"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/backlast3"
            app:layout_constraintEnd_toEndOf="@id/backlast3"
            app:layout_constraintStart_toStartOf="@id/backlast3"
            app:layout_constraintTop_toTopOf="@id/backlast3"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>