<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background">

        <TextView
            android:id="@+id/by_changing_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_rounded_textview"
            android:fontFamily="@font/roboto_flex"
            android:paddingStart="32dp"
            android:paddingVertical="8dp"
            android:paddingEnd="8dp"
            android:text="@string/by_changing_the_address"
            android:textSize="12dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:src="@drawable/icon_16x16"
            app:layout_constraintStart_toStartOf="@id/by_changing_address"
            android:paddingStart="8dp"
            app:layout_constraintBottom_toBottomOf="@id/by_changing_address"
            app:layout_constraintTop_toTopOf="@id/by_changing_address"/>

        <TextView
            android:id="@+id/claiminfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_flex"
            android:paddingStart="16dp"
            android:paddingBottom="8dp"
            android:paddingTop="24dp"
            android:text="@string/claim_info"
            android:textColor="@color/main_textcolor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/by_changing_address"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="@font/roboto_flex"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingVertical="16dp"
            android:text="@string/address"
            android:textColor="@color/main_textcolor"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/claiminfo"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/address_expandable_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:paddingVertical="12dp"
            android:background="@null"
            android:src="@drawable/ic_arrow_down"
            android:scaleType="fitEnd"
            android:paddingEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@id/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/address"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expandableContent4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/middle_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.4"
                android:orientation="vertical"/>


            <TextView
                android:id="@+id/house_TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_flex"
                android:paddingVertical="20dp"
                android:paddingStart="16dp"
                android:layout_marginEnd="4dp"
                android:text="@string/house"
                android:textColor="@color/main_textcolor"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/middle_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/enter_house_ET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/enter_house_number"
                android:inputType="textPersonName"
                android:textColorHint="@color/main_textcolor"
                app:layout_constraintBottom_toBottomOf="@id/house_TV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/middle_guideline"
                app:layout_constraintTop_toTopOf="@id/house_TV" />


            <TextView
                android:id="@+id/street_TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_flex"
                android:paddingVertical="20dp"
                android:paddingStart="16dp"
                android:layout_marginEnd="4dp"
                android:text="@string/street"
                android:textColor="@color/main_textcolor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/middle_guideline"
                app:layout_constraintTop_toBottomOf="@id/house_TV" />

            <EditText
                android:id="@+id/enter_streetET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/enter_street"
                android:inputType="textWebEmailAddress"
                android:textColorHint="@color/main_textcolor"
                app:layout_constraintBottom_toBottomOf="@id/street_TV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/middle_guideline"
                app:layout_constraintTop_toTopOf="@id/street_TV" />

            <TextView
                android:id="@+id/city_TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_flex"
                android:paddingVertical="20dp"
                android:paddingStart="16dp"
                android:layout_marginEnd="4dp"
                android:text="@string/city"
                android:textColor="@color/main_textcolor"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/middle_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/street_TV" />

            <EditText
                android:id="@+id/enter_city_ET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/enter_city"
                android:inputType="textWebEmailAddress"
                android:textColorHint="@color/main_textcolor"
                app:layout_constraintBottom_toBottomOf="@id/city_TV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/middle_guideline"
                app:layout_constraintTop_toTopOf="@id/city_TV" />

            <TextView
                android:id="@+id/state_TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_flex"
                android:paddingVertical="20dp"
                android:paddingStart="16dp"
                android:layout_marginEnd="4dp"
                android:text="@string/state"
                android:textColor="@color/main_textcolor"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/middle_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city_TV" />

            <EditText
                android:id="@+id/enter_state_ET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/enter_state"
                android:textColorHint="@color/main_textcolor"
                app:layout_constraintBottom_toBottomOf="@id/state_TV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/middle_guideline"
                app:layout_constraintTop_toTopOf="@id/state_TV" />

            <TextView
                android:id="@+id/postal_code_TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_flex"
                android:paddingVertical="20dp"
                android:paddingStart="16dp"
                android:layout_marginEnd="4dp"
                android:text="@string/postal_code"
                android:textColor="@color/main_textcolor"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/middle_guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/state_TV" />

            <EditText
                android:id="@+id/enter_postal_code_ET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/enter_postal_code"
                android:textColorHint="@color/main_textcolor"
                app:layout_constraintBottom_toBottomOf="@id/postal_code_TV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/middle_guideline"
                app:layout_constraintTop_toTopOf="@id/postal_code_TV" />

        </androidx.constraintlayout.widget.ConstraintLayout>



        <View
            android:id="@+id/backlast"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/nextButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/btn_rounded_back"
            android:text="@string/next"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/backlast"
            app:layout_constraintEnd_toEndOf="@id/backlast"
            app:layout_constraintStart_toStartOf="@id/backlast"
            app:layout_constraintTop_toTopOf="@id/backlast"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
